# det2026examples-codespace-STABLE

multi_agent_example/: README.md  pyproject.toml  report.md
multi_agent_example/src/multi_agent_example/: crew.py  main.py
multi_agent_example/src/multi_agent_example/config/: agents.yaml  tasks.yaml
multi_agent_example/src/multi_agent_example/tools/: custom_tool.py
