[project]
name = "multi_agent_example"
version = "0.1.0"
description = "multi-agent-example using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.11.0",
]

[project.scripts]
multi_agent_example = "multi_agent_example.main:run"
run_crew = "multi_agent_example.main:run"
train = "multi_agent_example.main:train"
replay = "multi_agent_example.main:replay"
test = "multi_agent_example.main:test"
run_with_trigger = "multi_agent_example.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
